versions/26.1.2/translated/ru_ru/develop/getting-started/project-structure.md
---
title: Структура проекта
description: Обзор структуры проекта Fabric мода.
authors:
  - IMB11
---

На этой странице будет рассмотрена структура проекта Fabric мода, и назначение каждого файла и папки в проекте.

## `fabric.mod.json` {#fabric-mod-json}

Файл [`fabric.mod.json`](../loader/fabric-mod-json) - это главный файл который описывает ваш мод загрузчику Fabric. Он содержит такую информацию как идентификатор мода, версию и зависимости.

Важнейшие поля в файле `fabric.mod.json`:

- `id`: идентификатор мода (должен быть уникальным);
- `name`: название мода;
- `environment`: среда выполнения, в которой запускается ваш мод. Например, `client`, `server`, или `*` для обеих;
- `entrypoints`: точки входа вашего мода. Например, `main` или `client`;
- `depends`: моды, от которых зависит ваш мод;
- `mixins`: миксины, которые предоставляет ваш мод.

## Точки входа {#entrypoints}

Как упоминалось ранее, файл [`fabric.mod.json`](../loader/fabric-mod-json) содержит поле с именем `entrypoints` — оно используется для указания точек входа, предоставляемых вашим модом.

Генератор шаблонных модов по умолчанию создает как `main`, так и `client` точку входа:

- Точка входа `main` используется для общего кода и содержится в классе, реализующем `ModInitializer`
- Точка входа `client` используется для кода, специфичного для клиента, и ее класс реализует `ClientModInitializer`

Эти точки входа вызывается, когда игра запускается.

Вот пример простой `main` точки входа этих логов, которая записывает сообщение на консоль при запуске игры:

<<< @/reference/26.1.2/src/main/java/com/example/docs/ExampleMod.java#entrypoint

## `src/main/resources` {#src-main-resources}

Папка `src/main/resources` используется для хранения ресурсов которые использует ваш мод, например текстуры, модели, и звуки.

Это так же папка хранения `fabric.mod.json` и все файлы конфигурации, которые использует ваш мод.

Активы хранятся в структуре, которая повторяет структуру ресурс-паков - например, текстура для блока будет храниться в `assets/example-mod/textures/block/block.png`.

## `src/client/resources` {#src-client-resources}

Папка `src/client/resources` используется для хранения клиентоориентированных ресурсов.

## `src/main/java` {#src-main-java}

Папка `src/main/java` используется для хранения исходного кода вашего мода, она существует на клиентской так и на серверной среде.

## `src/client/java` {#src-client-java}

Папка `src/client/java` используется для хранения клиентоориентированного исходного кода, например код рендеринга или логика на стороне клиента - например предоставляемый цвет блока.
